--- a/src/components/community/aq-community-postdetail-header.html
+++ b/src/components/community/aq-community-postdetail-header.html
@@ -180,7 +180,7 @@
             </template>
 
             <div id='author' class="layout horizontal center">
-                <aq-profile-img class="self-center" id='img' name="[[postHeader.user.firstName]][[postHeader.user.lastName]]" class="self-end"></aq-profile-img>
+                <aq-profile-img class="self-center" id='img' first-name="[[postHeader.user.firstName]]" last-name="[[postHeader.user.lastName]]" class="self-end"></aq-profile-img>
                 
                 <div> 
                     <div id='author-detail'> 
