Fix "Add reply" bug

--- a/src/components/community/aq-community-postdetail-reply.html
+++ b/src/components/community/aq-community-postdetail-reply.html
@@ -36,7 +36,7 @@
 
     <template>
         <div id='author' class="layout horizontal center">
-            <aq-profile-img class="self-center" id='img' name="[[replyData.user.firstName]][[replyData.user.lastName]]" class="self-end"></aq-profile-img>
+            <aq-profile-img class="self-center" id='img' first-name="[[replyData.user.firstName]]" last-name="[[replyData.user.lastName]]" class="self-end"></aq-profile-img>
         
             <div> 
                 <div id='author-detail'> 
