--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -438,9 +438,9 @@
                 'stop-clicked':'openStopDialog',
                 'compare-clicked': 'openCompareDialog',
                 'previewClicked': 'openPreview',
-                'analyzeClicked': 'goToAnalyze',
+                'analyze-clicked': 'goToAnalyze',
                 'clone-strategy-clicked': 'goToClone',
-                'editorClicked': 'goToEditor',
+                'editor-clicked': 'goToEditor',
                 'check-action-test': 'checkStrategyTest',
                 'check-action-live': 'checkStrategyLive',
                 'delete-action': 'onDeletion',
