--- a/src/components/editor/aq-editor-toolbar.html
+++ b/src/components/editor/aq-editor-toolbar.html
@@ -6,7 +6,6 @@
 <link rel='import' href='../../../bower_components/iron-signals/iron-signals.html'>
 
 <link rel='import' href='../../icons/aq-iconset.html'>
-<!--link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"-->
 
 <dom-module id='aq-editor-toolbar'>
     <style include="iron-flex iron-flex-alignment iron-positioning"></style>
@@ -160,6 +159,9 @@
     	</iron-signals>
 
         <iron-signals on-iron-signal-backtest-exception='onBacktestException'>
+        </iron-signals>
+
+        <iron-signals on-iron-signal-backtest-started='onBacktestStarted'>
         </iron-signals>
 
     	<iron-signals on-iron-signal-main-drawer-opened='closeDrawer'>
@@ -381,12 +383,15 @@
             },
 
             updatePct: function(e) {
-            	this.pctCompleted = e.detail.pctCompleted;
+                var e_backtestId = e.detail.id;
+
+                if(this.backtestId == e_backtestId) {
+            	   this.pctCompleted = e.detail.pctCompleted;
+                }
             },
 
             isCompletionPositive: function (pctCompleted) {
                 return pctCompleted > 0 && pctCompleted != 100;
-                
             },
 
             isBacktestComplete: function (pctCompleted) {
@@ -413,7 +418,6 @@
             },
 
             getStatusMessage: function(isRunning, pctCompleted) {
-                //console.log("Pct Completed " + this.pctCompleted + this.isRunning);
                 if(isRunning) {
                     if (this.isCompletionPositive(pctCompleted)) {
                 		return "Progress: " + this.pctCompleted.toString() +"%";
@@ -429,7 +433,6 @@
                 } else {
                     return "";
                 }
-
             },
 
             getStatusColor: function(isRunning, pctCompleted) {
@@ -446,13 +449,20 @@
 
             onBacktestException: function(e) {
                 var type = e.detail.type;
-                this.backtestId = e.detail.id;
+                var e_backtestId = e.detail.id;
 
-                if (type == 1) {
-                    this.pctCompleted = -1;
-                } else if (type == 2) {
-                    this.pctCompleted = -2;
+                if(this.backtestId == e_backtestId) {
+                    if (type == 1 ) {
+                        this.pctCompleted = -1;
+                    } else if (type == 2) {
+                        this.pctCompleted = -2;
+                    }
                 }
+            },
+
+            onBacktestStarted: function(e) {
+                this.backtestId = e.detail.id
+                this.pctCompleted = 0;
             }
 
         });
