In backtest-performance-detail-item,  reload data on change of backtestId (and not attached). Modified logs for new datatype. Code cleanup

--- a/src/components/aq-toolbar.html
+++ b/src/components/aq-toolbar.html
@@ -118,8 +118,8 @@
             <div id='right-container' class="layout horizontal center">
                 
                 <paper-tabs id='papertabs' selected="{{currentTab}}" noink no-bar>
-                    <paper-tab class="withoutTokenTa">HOME</paper-tab>
-                    <paper-tab class="withoutTokenTa">ABOUT US</paper-tab>
+                    <paper-tab class="withoutTokenTab">HOME</paper-tab>
+                    <paper-tab class="withoutTokenTab">ABOUT US</paper-tab>
                     <paper-tab class="withoutTokenTab">LOG IN</paper-tab>
                     <paper-tab id='signUpTab' class="withoutTokenTab">SIGN UP</paper-tab>
                     <paper-tab class="withTokenTab">RESEARCH</paper-tab>
