--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -545,6 +545,7 @@
                 if (!e.detail.id) {
                     e.detail.id = this._currentRow.id;
                 }
+                //Let the event propagate to aq-
             },
 
             goToClone: function (e) {
